    takes the same arguments and behaves the same way. (closes #58)

  * SagUserUtils now forces the database name to be '_users', which means you
    need to be careful if you're reusing the same Sag object between databases.

  * Removed the $upload parameter from SagUserUtils->changePassword(), which
    means that all calls to this function will result in a PUT to the server.

New Features

  * You can now provide a chunk size to break your bulk docs write into
    batches, resulting in more than one HTTP request. See the documentation for
    `bulk()`. Closes #67.

Fixed Bugs

  * Per the documentation, SagUserUtils->getUser() now only returns the
    response's body instead of the entire response.

Version 0.9.0
-------------

Breaking Changes

  * Default to cURL HTTP adapter instead of the native PHP implementation. The
    cURL adapter is faster, more stable, and supports SSL.

New Features

  * Support for PHP's strict mode. Strict mode is now turned on by default in
    PHP as of v5.4.

Fixed Bugs

  * Fixed response parsing bug in the cURL HTTP adapter for when HTTP bodies
    are received that have empty lines. For example, if a view returns zero
    results there is an empty line in the JSON that is returned. (closes #72)

  * Fixed parsing of set-cookie header to be case insensitive. (closes #77)

  * Fixed following redirects with the cURL HTTP adapter if PHP's open_basedir
    php.ini variable is set. (closes #78)

Version 0.8.0
-------------

Breaking Changes

  * Header keys are automatically lower cased now, whereas they previously kept
    their capitalization. Unfortunately different API endpoints would sometimes
    capitalize header names different (ex., Etag vs. ETag). Additionally,
    BigCouch and Cloudant sometimes have different header capitalization. So,
    whereas previously you might have done `$response->headers->Cookie` you
    must now do `$response->headers->cookie`.
