@@ -15,6 +15,9 @@ Breaking Changes
   * Removed the $upload parameter from SagUserUtils->changePassword(), which
     means that all calls to this function will result in a PUT to the server.
 
+  * Removed the SagUserUtils->makeHash() function as it's deprecated by
+    security functionality in CouchDB >=1.3.
+
 New Features
 
   * You can now provide a chunk size to break your bulk docs write into
